--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -3221,7 +3221,7 @@
    ],
    "source": [
     "# 4. Create a DataFrame from the list of temperatures for the month of June. \n",
-    "june_df =pd.DataFrame(list_june,columns = ['tob'])\n",
+    "june_df =pd.DataFrame(list_june,columns = ['June Temps'])\n",
     "june_df"
    ]
   },
@@ -3349,7 +3349,7 @@
    "outputs": [],
    "source": [
     "# 8. Create a DataFrame from the list of temperatures for the month of December. \n",
-    "dec_df = pd.DataFrame(list_dec)"
+    "dec_df = pd.DataFrame(list_dec,columns = ['December Temps'])"
    ]
   },
   {
