--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -3144,7 +3144,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>tob</th>\n",
+       "      <th>June Temps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3198,18 +3198,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       tob\n",
-       "0     78.0\n",
-       "1     76.0\n",
-       "2     78.0\n",
-       "3     76.0\n",
-       "4     77.0\n",
-       "...    ...\n",
-       "1695  79.0\n",
-       "1696  74.0\n",
-       "1697  74.0\n",
-       "1698  76.0\n",
-       "1699  75.0\n",
+       "      June Temps\n",
+       "0           78.0\n",
+       "1           76.0\n",
+       "2           78.0\n",
+       "3           76.0\n",
+       "4           77.0\n",
+       "...          ...\n",
+       "1695        79.0\n",
+       "1696        74.0\n",
+       "1697        74.0\n",
+       "1698        76.0\n",
+       "1699        75.0\n",
        "\n",
        "[1700 rows x 1 columns]"
       ]
@@ -3253,7 +3253,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>tob</th>\n",
+       "      <th>June Temps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3294,7 +3294,7 @@
        "</div>"
       ],
       "text/plain": [
-       "               tob\n",
+       "        June Temps\n",
        "count  1700.000000\n",
        "mean     74.944118\n",
        "std       3.257417\n",
@@ -3378,7 +3378,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>December Temps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3419,15 +3419,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                 0\n",
-       "count  1517.000000\n",
-       "mean     71.041529\n",
-       "std       3.745920\n",
-       "min      56.000000\n",
-       "25%      69.000000\n",
-       "50%      71.000000\n",
-       "75%      74.000000\n",
-       "max      83.000000"
+       "       December Temps\n",
+       "count     1517.000000\n",
+       "mean        71.041529\n",
+       "std          3.745920\n",
+       "min         56.000000\n",
+       "25%         69.000000\n",
+       "50%         71.000000\n",
+       "75%         74.000000\n",
+       "max         83.000000"
       ]
      },
      "execution_count": 12,
@@ -3442,10 +3442,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>December Temps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   December Temps\n",
+       "0            76.0\n",
+       "1            74.0\n",
+       "2            74.0\n",
+       "3            64.0\n",
+       "4            64.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dec_df.head()"
+   ]
   }
  ],
  "metadata": {
